# prosodia

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: bench_rtf.py
docs/: api-reference.md  architecture.md  design-notes.md  streaming.md  usage.md
examples/: 01_basic_say.py  02_emotion_control.py  03_streaming.py  04_normalize.py  05_custom_backend.py  README.md
prosodia/: __init__.py  cli.py  config.py  errors.py  logging.py  pipeline.py  types.py
prosodia/audio/: __init__.py  chunk.py  resample.py  wav.py
prosodia/expressive/: __init__.py  emotion.py  presets.py  style.py
prosodia/frontend/: __init__.py  phrasing.py  pipeline.py  symbols.py
prosodia/frontend/g2p/: __init__.py  chinese.py  english.py  sandhi.py
prosodia/frontend/normalize/: __init__.py  datetime.py  numbers_en.py  numbers_zh.py  pipeline.py  units.py
prosodia/llm/: __init__.py  base.py  cache.py  openai_compat.py  prompts.py  rulebased.py
prosodia/streaming/: __init__.py  chunker.py  engine.py  metrics.py  sink.py
prosodia/synthesis/: __init__.py  contour.py  duration.py  plan.py
prosodia/synthesis/backends/: __init__.py  base.py  formants.py  neural.py  reference.py
scripts/: run_bench.sh
tests/: test_audio_chunk.py  test_backend_registry.py  test_chunker.py  test_cli.py  test_config.py  test_contour.py  test_duration.py  test_emotion.py  test_engine.py  test_f0.py  test_frontend.py  test_g2p.py  test_llm_cache.py  test_llm_rulebased.py  test_metrics.py  test_normalize.py  test_numbers_en.py  test_numbers_zh.py  test_openai_adapter.py  test_phrasing.py  test_plan.py  test_reference_backend.py  test_resample.py  test_sandhi.py  test_say.py  test_sink.py  test_stream.py  test_style.py  test_style_apply.py  test_types.py  test_units.py  test_version.py  test_wav.py
