[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prosodia"
description = "Expressive, emotion- and style-controllable TTS framework with an LLM-driven text frontend and streaming inference."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jiang Que" }]
keywords = ["tts", "text-to-speech", "expressive", "prosody", "streaming", "chinese"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dynamic = ["version"]
dependencies = [
    "numpy>=2.2.6",
    "pypinyin>=0.55.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0.3"]
llm = ["openai>=2.44.0"]
neural = ["torch>=2.12.1"]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
prosodia = "prosodia.cli:main"

[project.urls]
Homepage = "https://github.com/emilymartin456/prosodia"
Issues = "https://github.com/emilymartin456/prosodia/issues"

[tool.setuptools.dynamic]
version = { attr = "prosodia.version.__version__" }

[tool.setuptools.packages.find]
include = ["prosodia*"]
